tests/paczka1/fuzzy1/89568680.err
Error in line 1: 0jMbzB92 A607 43,1
Error in line 2: Ndr2 S568 4,9
Error in line 6: 2WPpcGlKpPN S619 54,9
Error in line 15: 2WPpcGlKpPN S568 66,3
Error in line 23: DBV5 A607 87,6
Error in line 27: DBV5 S393 2,7
Error in line 26: S619 A607 70,0
